init-container/iptables-dump.txt
*nat
:PREROUTING ACCEPT [1168:70080]
:INPUT ACCEPT [1168:70080]
:OUTPUT ACCEPT [142:12794]
:POSTROUTING ACCEPT [142:12794]
:ISTIO_COPY_INBOUND - [0:0]
:ISTIO_COPY_IN_REDIRECT - [0:0]
:ISTIO_COPY_OUTPUT - [0:0]
:ISTIO_COPY_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_COPY_INBOUND
-A OUTPUT -p tcp -j ISTIO_COPY_OUTPUT
-A ISTIO_COPY_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_COPY_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_COPY_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_COPY_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_COPY_INBOUND -p tcp -j ISTIO_COPY_IN_REDIRECT
-A ISTIO_COPY_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_COPY_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_COPY_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_COPY_IN_REDIRECT
-A ISTIO_COPY_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_COPY_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_COPY_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_COPY_IN_REDIRECT
-A ISTIO_COPY_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_COPY_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_COPY_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_COPY_OUTPUT -j ISTIO_COPY_REDIRECT
-A ISTIO_COPY_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
